11.MERGE command can now be used to merge different database instances of areas/rooms/etc..
12.Ability INI entries: MAXCOMMONSKILLS, MAXCRAFTINGSKILLS, MAXNONCRAFTINGSKILLS, MAXLANGUAGES, WALKCOST, RUNCOST
13.Added an all-skills configuration file: /resources/skills/allqualifylist
14.IP service (CM1Server) -- a new, more formal-syntax mud interface -- see guides/CM1ServerGuide.html
15.DISABLE flag: LOGOUTS (keeps characters in game world even if they log out)
16.Another playable race: Duergar
17.Apprentice can now play only level 1 -- we had too many people playing all the way to 5 and regretting it.
18.IMPORT now supports areatype parameter for converting to different types.
19.MODIFY [TYPE] [NAME] [STAT] [VALUE] command syntax has had its first expansion since CM 1.0!
20.CLAN ROLE IDs renumbered (internal).  System will attempt to fix most values, but enchanters/treasurers will be confused.
21.ACT_PROG P clarified in the Scriptable document.
22.New DISABLE flags in coffeemud.ini: DARKNIGHTS, DARKWEATHER
23.EMAILREQ (player emails) can now be set to disabled in coffeemud.ini file.
24.FakeDB now supports PreparedStatements, and Apache Derby support is now complete. 
25.Skill Recipes: Skill Component entries can now be substituted for ingredient amount in skill recipes. Make items from other items!
26.WebMacro NumPlayers supports ALL, TOTAL, TOTALCACHED, and ACCOUNTS.  See Web Guide for more info.
27.New command: POSE, with new filter INI entry for it: POSEFILTER.  DISABLEd in coffeemud.ini file by default.
28.Old accounts will now be purged when they run out of characters. See INI entry: ACCOUNTPURGE
29.New Scriptable Commands: ISSPEAKING
30.Clan types (governments) are now configurable with clangovernments.xml, create, modify, destroy, mudgrinder
31.Racial Effects are now implemented as inexpensively as possible.  See genraces in command line & mudgrinder.
32.Clans (via their governments) now support custom help entries, clan effects, and clan abilities.