@@ -1579,9 +1579,9 @@ Valid embedded codes for custom prompts include:\n\r\
 %Kv:  Display the tanks current moves  %KV:  Display the tanks maximum moves\n\r\
 %Ke:  Display the tanks name           %KE:  Display the tanks health\n\r\
 %I :  Display hidden/invis. status     %@ :  Display the weather here\n\r\
-%d :  Display the range to your victim %r :  Display name of the room\n\r\
+%d :  Display the range to your victim %D :  Display ammo remaining\n\r\
 %B :  Go to a new line                 %z :  Display current area name\n\r\
-%R :  Display current room number (ARCHON ONLY)\n\r\
+%r :  Display name of the room         %R :  Display room number (ADMIN ONLY)\n\r\
 \n\r\
 COLORS:\n\r\
 ^^h :  Standard hit point color        ^^m :  Standard mana color\n\r\
